:lipstick: add some illustrations

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,13 +32,12 @@
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="360dp"
                 android:layout_marginTop="32dp"
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/illustration"
-                android:maxHeight="360dp"
                 android:scaleType="fitCenter"
-                android:src="@drawable/illust"
+                android:src="@drawable/ask"
                 app:layout_constraintEnd_toEndOf="@+id/textView2"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="@+id/textView2"
