--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/refresher"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.auth.Login">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,98 +15,112 @@
             android:id="@+id/scrollView2"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fillViewport="true"
-            tools:layout_editor_absoluteX="35dp"
-            tools:layout_editor_absoluteY="95dp">
+            android:fillViewport="true">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+            <RelativeLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="35dp"
                 android:paddingTop="95dp">
 
-                <TextView
-                    android:id="@+id/header"
-                    style="@style/SPPKelompok2.Text.Semibold.Header1"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/constraint"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Login Petugas"
-                    android:textColor="@color/red"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <TextView
-                    android:id="@+id/description"
-                    style="@style/SPPKelompok2.Text.Regular.Body2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Masukkan Username dan Password anda yang sudah terdaftar."
-                    app:layout_constraintStart_toStartOf="@+id/header"
-                    app:layout_constraintTop_toBottomOf="@+id/header" />
-
-                <LinearLayout
-                    android:id="@+id/linearLayout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/header"
-                    app:layout_constraintTop_toBottomOf="@+id/description">
+                    android:layout_height="wrap_content">
 
                     <TextView
-                        android:id="@+id/usernameLabel"
-                        style="@style/SPPKelompok2.Text.Semibold.Body2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Username" />
-
-                    <EditText
-                        android:id="@+id/username"
-                        style="@style/SPPKelompok2.Text.Medium.Body2"
+                        android:id="@+id/header"
+                        style="@style/SPPKelompok2.Text.Semibold.Header1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/selector_edit_text"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:hint="Username"
-                        android:inputType="text"
-                        android:maxLength="25"
-                        android:textColor="?colorPrimary" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:orientation="vertical"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/linearLayout"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+                        android:text="Login Petugas"
+                        android:textColor="@color/red"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        style="@style/SPPKelompok2.Text.Semibold.Body2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Password" />
-
-                    <EditText
-                        android:id="@+id/password"
-                        style="@style/SPPKelompok2.Text.Medium.Body2"
+                        android:id="@+id/description"
+                        style="@style/SPPKelompok2.Text.Regular.Body2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/selector_edit_text"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:hint="Password"
-                        android:inputType="textPassword"
-                        android:maxLength="255"
-                        android:textColor="?colorPrimary" />
+                        android:text="Masukkan Username dan Password anda yang sudah terdaftar."
+                        app:layout_constraintStart_toStartOf="@+id/header"
+                        app:layout_constraintTop_toBottomOf="@+id/header" />
 
-                </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/linearLayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="40dp"
+                        android:orientation="vertical"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/header"
+                        app:layout_constraintTop_toBottomOf="@+id/description">
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        <TextView
+                            android:id="@+id/usernameLabel"
+                            style="@style/SPPKelompok2.Text.Semibold.Body2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Username" />
+
+                        <EditText
+                            android:id="@+id/username"
+                            style="@style/SPPKelompok2.Text.Medium.Body2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/selector_edit_text"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:hint="Username"
+                            android:inputType="text"
+                            android:maxLength="25"
+                            android:textColor="?colorPrimary" />
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/linearLayout9"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="20dp"
+                        android:orientation="vertical"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+                        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+                        <TextView
+                            style="@style/SPPKelompok2.Text.Semibold.Body2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Password" />
+
+                        <EditText
+                            android:id="@+id/password"
+                            style="@style/SPPKelompok2.Text.Medium.Body2"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@drawable/selector_edit_text"
+                            android:clickable="true"
+                            android:focusable="true"
+                            android:hint="Password"
+                            android:inputType="textPassword"
+                            android:maxLength="255"
+                            android:textColor="?colorPrimary" />
+
+                    </LinearLayout>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_below="@+id/constraint"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginTop="60dp"
+                    android:src="@drawable/login" />
+
+            </RelativeLayout>
 
         </ScrollView>
 
