--- a/app/src/main/res/layout/not_found_screen.xml
+++ b/app/src/main/res/layout/not_found_screen.xml
@@ -13,7 +13,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/illust" />
+        app:srcCompat="@drawable/not_found" />
 
     <TextView
         android:id="@+id/warningTitle"
